Use roles for project members + Fix Tests